<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="img_search_hint">Image Search</string>
    <string name="search_btn_text">Search</string>
    <string name="img_title_label">Image Title</string>
	<string name="default_label">Default Title</string>
	<string name="image_size_filter_label">Image Size</string>
	<string name="color_filter_label">Color Filter</string>
	<string name="image_type_filter_label">Image Type</string>
	<string name="site_filter_label">Site Filter</string>
	<string name="btn_cancel_label">CANCEL</string>
	<string name="btn_save_label">SAVE</string>
</resources>
