<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20000010"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:gravity="bottom"
        android:text="@string/image_size_filter_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/tvImageSize"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvImageSize"
        android:entries="@array/image_size_array"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="20dp"
        android:text="@string/color_filter_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinColorFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/tvColorFilter"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:entries="@array/color_filter_array"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="20dp"
        android:text="@string/image_type_filter_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinImageType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/tvImageType"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvImageType"
        android:entries="@array/image_type_array"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="20dp"
        android:text="@string/site_filter_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:ems="10" >

    </EditText>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSiteFilter"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_cancel_label" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/btn_save_label" />

</RelativeLayout>